# datasette-lite-builder

./: .gitignore  ACTION_README.md  CHANGELOG.md  Dockerfile  README.md  action.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: test.yml  versioning.yml
script/: server  test
src/datasette_lite_builder/: __init__.py  __main__.py  build.py  serve.py
src/datasette_lite_builder/jinja_templates/: base_lite_index.html  webworker.js  webworker.py
src/datasette_lite_builder/lite_config/-/static/: table.js
src/datasette_lite_builder/themes/mysoc/css/: mysoc.css
src/datasette_lite_builder/themes/mysoc/templates/: _footer.html  base.html  database.html  index.html  lite_index.html  table.html
src/datasettelite_builder/: __init__.py
tests/: test_datasette_lite_default.py  test_datasettelite_builder.py  test_meta.py
