[tool.poetry]
name = "datasettelite-builder"
version = "0.1.0"
description = "Project to render a customisable datasettelite"
authors = ["mySociety <alex.parsons@mysociety.org>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/mysociety/datasettelite-builder"
repository = "https://github.com/mysociety/datasettelite-builder"
include = [
    "LICENSE.md",
]

[tool.poetry_bumpversion.file."src/datasettelite_builder/__init__.py"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
pylint = "^2.12.2"
black = "^22.3.0"
pyright = "^1.1"
toml = "^0.10.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"