[tool.poetry]
name = "datasette-lite-builder"
version = "0.1.0"
description = "Project to render a customisable datasette-lite"
authors = ["mySociety <alex.parsons@mysociety.org>"]
readme = "README.md"
license = "APACHE-2.0"
homepage = "https://github.com/mysociety/datasette-lite-builder"
repository = "https://github.com/mysociety/datasette-lite-builder"
include = [
    "LICENSE",
]

[tool.poetry_bumpversion.file."src/datasette_lite_builder/__init__.py"]

[tool.poetry.dependencies]
python = "^3.9"
jinja2 = "^3.1.2"
click = "^8.1.7"
watchdog = "^3.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
pylint = "^2.12.2"
black = "^22.3.0"
pyright = "^1.1"
toml = "^0.10.2"
playwright = "^1.37.0"
pytest-playwright = "0.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
